--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,9 @@ main{
     background-color:  #0b0a24e8;
     margin: 0 10px 10px 0;
     cursor: pointer;
+    text-align: center;
+    font-size: 4em;
+    padding: 20px;
 }
 
 .vez-jogar, .vencedor, .btn{
