--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ main{
     left: 0;
     right: 0;
     bottom: 0;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
 }
